libhdfs3/src/client/hdfs.h

typedef int64_t tOffset; /// offset within the file
struct HdfsFileSystemInternalWrapper;
typedef struct HdfsFileSystemInternalWrapper * hdfsFS;
/**
 * hdfsEncryptionZoneInfo- Information about an encryption zone.
 */
typedef struct {
    int mSuite; /* the suite of encryption zone */
    int mCryptoProtocolVersion; /* the version of crypto protocol */
    int64_t mId; /* the id of encryption zone */
    char * mPath; /* the path of encryption zone */
    char * mKeyName; /* the key name of encryption zone */
} hdfsEncryptionZoneInfo;
/**
 * hdfsFreeEncryptionZoneInfo - Free up the hdfsEncryptionZoneInfo array (including fields)
 * @param infos The array of dynamically-allocated hdfsEncryptionZoneInfo
 * objects.
 * @param numEntries The size of the array.
 */
void hdfsFreeEncryptionZoneInfo(hdfsEncryptionZoneInfo * infos, int numEntries);
/**
 * hdfsTruncate - Truncate the file in the indicated path to the indicated size.
 * @param fs The configured filesystem handle.
 * @param path the path to the file.
 * @param pos the position the file will be truncated to.
 * @param shouldWait output value, true if and client does not need to wait for block recovery,
 * false if client needs to wait for block recovery.
 */
int hdfsTruncate(hdfsFS fs, const char * path, tOffset pos, int * shouldWait);
/**
 * Get a delegation token from namenode.
 * The token should be freed using hdfsFreeDelegationToken after canceling the token or token expired.
 *
 * @param fs The file system
 * @param renewer The user who will renew the token
 *
 * @return Return a delegation token, NULL on error.
 */
char * hdfsGetDelegationToken(hdfsFS fs, const char * renewer);
/**
 * Free a delegation token.
 *
 * @param token The token to be freed.
 */
void hdfsFreeDelegationToken(char * token);
/**
 * Renew a delegation token.
 *
 * @param fs The file system.
 * @param token The token to be renewed.
 *
 * @return the new expiration time
 */
int64_t hdfsRenewDelegationToken(hdfsFS fs, const char * token);
/**
 * Cancel a delegation token.
 *
 * @param fs The file system.
 * @param token The token to be canceled.
 *
 * @return return 0 on success, -1 on error.
 */
int hdfsCancelDelegationToken(hdfsFS fs, const char * token);
typedef struct Namenode {
    char * rpc_addr;    // namenode rpc address and port, such as "host:8020"
    char * http_addr;   // namenode http address and port, such as "host:50070"
} Namenode;
/**
 * If hdfs is configured with HA namenode, return all namenode informations as an array.
 * Else return NULL.
 *
 * Using configure file which is given by environment parameter LIBHDFS3_CONF
 * or "hdfs-client.xml" in working directory.
 *
 * @param nameservice hdfs name service id.
 * @param size output the size of returning array.
 *
 * @return return an array of all namenode information.
 */
Namenode * hdfsGetHANamenodes(const char * nameservice, int * size);
/**
 * If hdfs is configured with HA namenode, return all namenode informations as an array.
 * Else return NULL.
 *
 * @param conf the path of configure file.
 * @param nameservice hdfs name service id.
 * @param size output the size of returning array.
 *
 * @return return an array of all namenode information.
 */
Namenode * hdfsGetHANamenodesWithConfig(const char * conf, const char * nameservice, int * size);
/**
 * Free the array returned by hdfsGetConfiguredNamenodes()
 *
 * @param the array return by hdfsGetConfiguredNamenodes()
 */
void hdfsFreeNamenodeInformation(Namenode * namenodes, int size);
typedef struct BlockLocation {
    uint32_t rangeId;
    uint32_t replicaGroupId;
    int corrupt;            // If the block is corrupt
    int numOfNodes;         // Number of Datanodes which keep the block
    char ** hosts;          // Datanode hostnames
    char ** names;          // Datanode IP:xferPort for accessing the block
    char ** topologyPaths;  // Full path name in network topology
    tOffset length;         // block length, may be 0 for the last block
    tOffset offset;         // Offset of the block in the file
} BlockLocation;
/**
 * Get an array containing hostnames, offset and size of portions of the given file.
 *
 * @param fs The file system
 * @param path The path to the file
 * @param start The start offset into the given file
 * @param length The length for which to get locations for
 * @param numOfBlock Output the number of elements in the returned array
 *
 * @return An array of BlockLocation struct.
 */
BlockLocation * hdfsGetFileBlockLocations(hdfsFS fs, const char * path,
        tOffset start, tOffset length, int * numOfBlock);
/**
 * Free the BlockLocation array returned by hdfsGetFileBlockLocations
 *
 * @param locations The array returned by hdfsGetFileBlockLocations
 * @param numOfBlock The number of elements in the locaitons
 */
void hdfsFreeFileBlockLocations(BlockLocation * locations, int numOfBlock);
/**
 * Create encryption zone for the directory with specific key name
 * @param fs The configured filesystem handle.
 * @param path The path of the directory.
 * @param keyname The key name of the encryption zone 
 * @return Returns 0 on success, -1 on error.
 */
int hdfsCreateEncryptionZone(hdfsFS fs, const char * path, const char * keyName);
/**
 * hdfsEncryptionZoneInfo - Get information about a path as a (dynamically
 * allocated) single hdfsEncryptionZoneInfo struct. hdfsEncryptionZoneInfo should be
 * called when the pointer is no longer needed.
 * @param fs The configured filesystem handle.
 * @param path The path of the encryption zone.
 * @return Returns a dynamically-allocated hdfsEncryptionZoneInfo object;
 * NULL on error.
 */
hdfsEncryptionZoneInfo * hdfsGetEZForPath(hdfsFS fs, const char * path);
/**
 * hdfsEncryptionZoneInfo -  Get list of all the encryption zones.
 * hdfsFreeEncryptionZoneInfo should be called to deallocate memory.
 * @param fs The configured filesystem handle.
 * @return Returns a dynamically-allocated array of hdfsEncryptionZoneInfo objects;
 * NULL on error.
 */
hdfsEncryptionZoneInfo * hdfsListEncryptionZones(hdfsFS fs, int * numEntries);