src/hdfs3_bindings.rs

extern "C" {
    #[doc = " hdfsTruncate - Truncate the file in the indicated path to the indicated size."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param path the path to the file."]
    #[doc = " @param pos the position the file will be truncated to."]
    #[doc = " @param shouldWait output value, true if and client does not need to wait for block recovery,"]
    #[doc = " false if client needs to wait for block recovery."]
    pub fn hdfsTruncate(
        fs: hdfsFS,
        path: *const ::std::os::raw::c_char,
        pos: tOffset,
        shouldWait: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Get a delegation token from namenode."]
    #[doc = " The token should be freed using hdfsFreeDelegationToken after canceling the token or token expired."]
    #[doc = ""]
    #[doc = " @param fs The file system"]
    #[doc = " @param renewer The user who will renew the token"]
    #[doc = ""]
    #[doc = " @return Return a delegation token, NULL on error."]
    pub fn hdfsGetDelegationToken(
        fs: hdfsFS,
        renewer: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Free a delegation token."]
    #[doc = ""]
    #[doc = " @param token The token to be freed."]
    pub fn hdfsFreeDelegationToken(token: *mut ::std::os::raw::c_char);
}
extern "C" {
    #[doc = " Renew a delegation token."]
    #[doc = ""]
    #[doc = " @param fs The file system."]
    #[doc = " @param token The token to be renewed."]
    #[doc = ""]
    #[doc = " @return the new expiration time"]
    pub fn hdfsRenewDelegationToken(fs: hdfsFS, token: *const ::std::os::raw::c_char) -> i64;
}
extern "C" {
    #[doc = " Cancel a delegation token."]
    #[doc = ""]
    #[doc = " @param fs The file system."]
    #[doc = " @param token The token to be canceled."]
    #[doc = ""]
    #[doc = " @return return 0 on success, -1 on error."]
    pub fn hdfsCancelDelegationToken(
        fs: hdfsFS,
        token: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Namenode {
    pub rpc_addr: *mut ::std::os::raw::c_char,
    pub http_addr: *mut ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_Namenode() {
    assert_eq!(
        ::std::mem::size_of::<Namenode>(),
        16usize,
        concat!("Size of: ", stringify!(Namenode))
    );
    assert_eq!(
        ::std::mem::align_of::<Namenode>(),
        8usize,
        concat!("Alignment of ", stringify!(Namenode))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Namenode>())).rpc_addr as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Namenode),
            "::",
            stringify!(rpc_addr)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<Namenode>())).http_addr as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Namenode),
            "::",
            stringify!(http_addr)
        )
    );
}
extern "C" {
    #[doc = " If hdfs is configured with HA namenode, return all namenode informations as an array."]
    #[doc = " Else return NULL."]
    #[doc = ""]
    #[doc = " Using configure file which is given by environment parameter LIBHDFS3_CONF"]
    #[doc = " or \"hdfs-client.xml\" in working directory."]
    #[doc = ""]
    #[doc = " @param nameservice hdfs name service id."]
    #[doc = " @param size output the size of returning array."]
    #[doc = ""]
    #[doc = " @return return an array of all namenode information."]
    pub fn hdfsGetHANamenodes(
        nameservice: *const ::std::os::raw::c_char,
        size: *mut ::std::os::raw::c_int,
    ) -> *mut Namenode;
}
extern "C" {
    #[doc = " If hdfs is configured with HA namenode, return all namenode informations as an array."]
    #[doc = " Else return NULL."]
    #[doc = ""]
    #[doc = " @param conf the path of configure file."]
    #[doc = " @param nameservice hdfs name service id."]
    #[doc = " @param size output the size of returning array."]
    #[doc = ""]
    #[doc = " @return return an array of all namenode information."]
    pub fn hdfsGetHANamenodesWithConfig(
        conf: *const ::std::os::raw::c_char,
        nameservice: *const ::std::os::raw::c_char,
        size: *mut ::std::os::raw::c_int,
    ) -> *mut Namenode;
}
extern "C" {
    #[doc = " Free the array returned by hdfsGetConfiguredNamenodes()"]
    #[doc = ""]
    #[doc = " @param the array return by hdfsGetConfiguredNamenodes()"]
    pub fn hdfsFreeNamenodeInformation(namenodes: *mut Namenode, size: ::std::os::raw::c_int);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct BlockLocation {
    pub rangeId: u32,
    pub replicaGroupId: u32,
    pub corrupt: ::std::os::raw::c_int,
    pub numOfNodes: ::std::os::raw::c_int,
    pub hosts: *mut *mut ::std::os::raw::c_char,
    pub names: *mut *mut ::std::os::raw::c_char,
    pub topologyPaths: *mut *mut ::std::os::raw::c_char,
    pub length: tOffset,
    pub offset: tOffset,
}
#[test]
fn bindgen_test_layout_BlockLocation() {
    assert_eq!(
        ::std::mem::size_of::<BlockLocation>(),
        56usize,
        concat!("Size of: ", stringify!(BlockLocation))
    );
    assert_eq!(
        ::std::mem::align_of::<BlockLocation>(),
        8usize,
        concat!("Alignment of ", stringify!(BlockLocation))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockLocation>())).rangeId as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockLocation),
            "::",
            stringify!(rangeId)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockLocation>())).replicaGroupId as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockLocation),
            "::",
            stringify!(replicaGroupId)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockLocation>())).corrupt as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockLocation),
            "::",
            stringify!(corrupt)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockLocation>())).numOfNodes as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockLocation),
            "::",
            stringify!(numOfNodes)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockLocation>())).hosts as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockLocation),
            "::",
            stringify!(hosts)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockLocation>())).names as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockLocation),
            "::",
            stringify!(names)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockLocation>())).topologyPaths as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockLocation),
            "::",
            stringify!(topologyPaths)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockLocation>())).length as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockLocation),
            "::",
            stringify!(length)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockLocation>())).offset as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockLocation),
            "::",
            stringify!(offset)
        )
    );
}
extern "C" {
    #[doc = " Get an array containing hostnames, offset and size of portions of the given file."]
    #[doc = ""]
    #[doc = " @param fs The file system"]
    #[doc = " @param path The path to the file"]
    #[doc = " @param start The start offset into the given file"]
    #[doc = " @param length The length for which to get locations for"]
    #[doc = " @param numOfBlock Output the number of elements in the returned array"]
    #[doc = ""]
    #[doc = " @return An array of BlockLocation struct."]
    pub fn hdfsGetFileBlockLocations(
        fs: hdfsFS,
        path: *const ::std::os::raw::c_char,
        start: tOffset,
        length: tOffset,
        numOfBlock: *mut ::std::os::raw::c_int,
    ) -> *mut BlockLocation;
}
extern "C" {
    #[doc = " Free the BlockLocation array returned by hdfsGetFileBlockLocations"]
    #[doc = ""]
    #[doc = " @param locations The array returned by hdfsGetFileBlockLocations"]
    #[doc = " @param numOfBlock The number of elements in the locaitons"]
    pub fn hdfsFreeFileBlockLocations(
        locations: *mut BlockLocation,
        numOfBlock: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[doc = " Create encryption zone for the directory with specific key name"]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param path The path of the directory."]
    #[doc = " @param keyname The key name of the encryption zone"]
    #[doc = " @return Returns 0 on success, -1 on error."]
    pub fn hdfsCreateEncryptionZone(
        fs: hdfsFS,
        path: *const ::std::os::raw::c_char,
        keyName: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " hdfsEncryptionZoneInfo - Get information about a path as a (dynamically"]
    #[doc = " allocated) single hdfsEncryptionZoneInfo struct. hdfsEncryptionZoneInfo should be"]
    #[doc = " called when the pointer is no longer needed."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @param path The path of the encryption zone."]
    #[doc = " @return Returns a dynamically-allocated hdfsEncryptionZoneInfo object;"]
    #[doc = " NULL on error."]
    pub fn hdfsGetEZForPath(
        fs: hdfsFS,
        path: *const ::std::os::raw::c_char,
    ) -> *mut hdfsEncryptionZoneInfo;
}
extern "C" {
    #[doc = " hdfsEncryptionZoneInfo -  Get list of all the encryption zones."]
    #[doc = " hdfsFreeEncryptionZoneInfo should be called to deallocate memory."]
    #[doc = " @param fs The configured filesystem handle."]
    #[doc = " @return Returns a dynamically-allocated array of hdfsEncryptionZoneInfo objects;"]
    #[doc = " NULL on error."]
    pub fn hdfsListEncryptionZones(
        fs: hdfsFS,
        numEntries: *mut ::std::os::raw::c_int,
    ) -> *mut hdfsEncryptionZoneInfo;
}
